<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            android:defaultValue="@string/pref_default_display_name"
            android:key='"user_display_name"'
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:summary="@string/pref_title_display_name"
            android:title="@string/pref_title_display_name" />
        <EditTextPreference
            android:layout_gravity="start|left"
            android:defaultValue="@string/pref_default_email_address"
            android:key='"user_email_address"'
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:summary="@string/pref_title_email_address"
            android:title="@string/pref_title_email_address" />
        <ListPreference
            android:defaultValue="1"
            android:entries="@array/pref_entries_favorite_social"
            android:entryValues="@array/pref_values_favorite_social"
            android:key='"user_favorite_social"'
            android:title="@string/pref_title_favorite_social" />

    </PreferenceCategory>

</PreferenceScreen>
